// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main app bar component app bar indented when drawer is open 1`] = `
Object {
  "adminPageDefaultTab": undefined,
  "darkMode": false,
  "drawerOpen": true,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;

exports[`Main app bar component app bar renders correctly 1`] = `
Object {
  "adminPageDefaultTab": undefined,
  "darkMode": false,
  "drawerOpen": false,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;

exports[`Main app bar component does not render Help button when feature is false 1`] = `
Object {
  "adminPageDefaultTab": undefined,
  "darkMode": false,
  "drawerOpen": false,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": false,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;

exports[`Main app bar component uses single plugin logo when feature is true 1`] = `
Object {
  "adminPageDefaultTab": undefined,
  "darkMode": false,
  "drawerOpen": false,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": true,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;
